# fii-portfolio-agent

./: Dockerfile  README.md  main.py  pyproject.toml
app/: app.py  db.py  schema.py  service.py
app/agent/: tools.py
app/routers/: assets.py  auth.py  portfolio.py  refresh.py  transactions.py
static/: index.html
test_app/: conftest.py  test_database_config.py  test_endpoints.py  test_services.py
